# simple-ai-hackathon4-d

./: CODEOWNERS  LICENSE  Makefile  Procfile  README.md  app.py  app_miku.py  article.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
